adding http servers exo

--- a/client/about/index.html
+++ b/client/about/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>About</title><link rel="stylesheet" href="style.css"></head><body><h1>About</h1></body></html>
+<!DOCTYPE html><html><head><title>About</title><link rel="stylesheet" href="style.css"></head><style>body { background-color: #00FFFF; }</style><body><h1>About</h1></body></html>
