--- a/client/index.html
+++ b/client/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>Home</title><link rel="stylesheet" href="style.css"></head><body><h1>Home</h1></body></html>
+<!DOCTYPE html><html><head><title>Home</title><link rel="stylesheet" href="style.css"></head><style>body { background-color: #F0F0F0; }</style><body><h1>Home</h1></body></html>
